# csopesy-mp1

./: .gitignore  CMakeLists.txt  MCO2 Specs.md  MCO2_Specs.md  MCO2_implementation.md  README.txt  Week11.md  build.bat  c.txt  config.txt  csopesy-backing-store.txt  csopesy-log.txt  expected.txt  order.txt  proc-01.txt  proc-02.txt  proc-03.txt  process01.txt  process02.txt  process03.txt  process04.txt  process05.txt  process06.txt  process07.txt  process08.txt  process09.txt  process10.txt  test_in.txt
Seatwork/: Seatwork.h
diagrams/: A_system_overview.md  B_command_recognition.md  C_console_ui.md  D_command_interpreter.md  E_process_representation.md  F_scheduler_implementation.md  G_instruction_engine.md  INDEX.md  WRITEUP_pseudocode.txt
outputs/: a.txt  bad1.txt  good1.txt  process01.txt  process02.txt  process03.txt  process04.txt  process05.txt  process06.txt  process07.txt  process08.txt  process09.txt  process10.txt  process11.txt  process12.txt  process13.txt  process14.txt  process15.txt  process16.txt  process17.txt  process18.txt  process19.txt  process20.txt  process21.txt  process22.txt  process23.txt  process24.txt  process25.txt  process26.txt  process27.txt  process28.txt  process29.txt  process30.txt  process31.txt  process32.txt  process33.txt  process34.txt  process35.txt  process36.txt  process37.txt  (+62 more)
src/: Config.cpp  Config.h  ConsoleManager.cpp  ConsoleManager.h  InstructionEngine.cpp  InstructionEngine.h  MemoryManager.cpp  MemoryManager.h  MockProcessData.cpp  MockProcessData.h  OutputManager.cpp  OutputManager.h  Process.cpp  Process.h  (+13 more)
